# CPP_Learning_Code

chap-01/: 1-hello_world.cpp  2-parrot.cpp  3-array.cpp  4-calculator.cpp
chap-02/: 1-first_class.cpp  2-constructor.cpp  3-clone.cpp
chap-02/4-rectangle/: Rectangle.cpp  Rectangle.h  main.cpp
chap-02/5-polygon/: Polygon.cpp  Polygon.h  main.cpp
chap-03/: 1-doc.md  1-vectors.cpp  2-sequentials.cpp  5-tuples.cpp
chap-03/3-associatives/: keys.h  main.cpp
chap-04/: CMakeLists.txt
chap-04/1-hierarchy/: Boss.h  Employee.cpp  Employee.h  Intern.cpp  Intern.h
chap-04/2-farm/: Animal.h  Cat.h  Chicken.h  Cow.h  Dog.h  FarmHouse.cpp  Opera.h
chap-04/3-vehicles/: Car.h  FlyingCar.h  Program.cpp  Vehicle.h
tp-01/: CMakeLists.txt  TP1.md  dict.txt  ex3.cpp  ex4.cpp  rep.md  translator.cpp
tp-02/: AddX.cpp  CMakeLists.txt  TP2.md
tp-02/ex2/: Histogram.cpp  Histogram.h  main.cpp
tp-02/ex3/: Clock.cpp  Clock.h  MinuteHand.cpp  MinuteHand.h  SecondHand.cpp  SecondHand.h
tp-03/: CMakeLists.txt  TP3.md
tp-03/PhoneBook/: Person.cpp  Person.h  PhoneBook.cpp  PhoneBook.h  PhoneNumber.cpp  PhoneNumber.h  Tests.cpp
tp-03/exo1/: q5.cpp
tp-04/: CMakeLists.txt
tp-04/PhoneCalls/: HomePhone.h  MobilePhone.h  Person.h  Phone.h
