add_executable(tp2-reminders
    Reminders.cpp
    Event.h
    Parsing.cpp
    Parsing.h
)

add_executable(ex2
    ex2/main.cpp
    ex2/Histogram.cpp
    ex2/Histogram.h
)

add_executable(ex3
    ex3/Clock.cpp
    ex3/Clock.h
    ex3/MinuteHand.cpp
    ex3/MinuteHand.h
    ex3/SecondHand.cpp
    ex3/SecondHand.h
)